--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -1,4 +1,5 @@
 <%- include('../partials/html-head') %>
+<h1>Musical Genius</h1>
 <%- include('../partials/nav') %>
 
 <form class="auth" action="/auth/sign-up" method="POST">
