Add edit and delete

--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -2,8 +2,15 @@
 <%- include('../partials/nav') %>
 
 <section>
-  <h1><%= song.title %></h1>
+  <p>From the Studio of <%= song.owner %></p>
+  <h1><%= song.title %></h1> 
   <h1><%= song.artist %></h1>
+    <a href="/songs/<%= song._id %>/edit">
+      <button class="btn">Edit Song</button>
+    </a>
+    <form action="/songs/<%= song._id %>?_method=DELETE" method="POST">
+      <button type="submit" class="btn">X</button>
+    </form>
 </section>
 
 <%- include('../partials/footer') %>
