--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<h1>You selected <%= selectedUser.username %></h1>
+<h1>This is your profile page <%= selectedUser.username %></h1>
+
 
 <%- include('../partials/footer') %>
