--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,7 @@
 <%- include('./partials/html-head') %>
 <%- include('./partials/nav') %>
+
+<h1>Welcome to Musical Genius</h1>
+<p>This is the INDEX view</p>
+
 <%- include('./partials/footer') %>
