Add text to all pages

--- a/views/songs/profile.ejs
+++ b/views/songs/profile.ejs
@@ -3,5 +3,6 @@
 
 <h1>This is your profile page <%= selectedUser.username %></h1>
 
-<h2>But this is the users/show. Wrong way!</h2>
+
+<h2>You made it!</h2>
 <%- include('../partials/footer') %>
