--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -12,7 +12,26 @@
     <form action="/songs/<%= song._id %>?_method=DELETE" method="POST">
       <button type="submit" class="btn">X</button>
     </form>
+    <% } else { %>
+    <section>
+      <label for="content-input">Comment on Song:
+        <input type="text" name="content" id="content-input">
+      </label> <br>
+      <label for="add-song-input">Add Song to your list?
+        <input type="checkbox" name="addSong" id="add-song-input">
+      </label> <br>
+      <button type="submit">Comment</button>
+    </section>
     <% } %>
 </section>
+
+<h2>Comments</h2>
+<ul>
+  <% song.comments?.forEach(comment => { %>
+    <li>
+      <%= comment.content %> - <%= comment.author.username %>
+    </li> 
+  <% }) %>
+</ul>
 
 <%- include('../partials/footer') %>
