--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -14,13 +14,10 @@
     </form>
     <% } else { %>
     <section>
-      <label for="content-input">Comment on Song:
-        <input type="text" name="content" id="content-input">
-      </label> <br>
-      <label for="add-song-input">Add Song to your list?
-        <input type="checkbox" name="addSong" id="add-song-input">
-      </label> <br>
+      <form action="/songs/<%= song._id %>/comments" method="POST">
+      <textarea name="content"></textarea> <br>
       <button type="submit">Comment</button>
+      </form> <br>
     </section>
     <% } %>
 </section>
@@ -29,7 +26,7 @@
 <ul>
   <% song.comments?.forEach(comment => { %>
     <li>
-      <%= comment.content %> - <%= comment.author.username %>
+      <%= comment.content %> - <a href="/users/<%= comment.author._id %>"><%= comment.author.username %></a>
     </li> 
   <% }) %>
 </ul>
