--- a/views/songs/difprofile.ejs
+++ b/views/songs/difprofile.ejs
@@ -3,7 +3,9 @@
 
 <h1>This is <%= selectedUser.username %>'s Profile Page</h1>
 
-
+<div>
+  <button type="submit">Add Friend</button>
+</div>
 
 <section>
   <h1><%= selectedUser.username %>'s Songs</h1>
