--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -5,7 +5,7 @@
 
 <section class="genius">
 <% users.forEach(u => { %>
-  <div>
+  <div class="person">
   <h4><a style="text-decoration:none" class="profile" href="/users/<%= u._id %>"><%= u.username %></a></h4>
 </div>
 <% }) %>
