Add css for index songs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,6 +2,6 @@
 <%- include('./partials/nav') %>
 
 <h1>Welcome to Musical Genius</h1>
-<p>This is the INDEX view</p>
+<p>The Perfect Place to showcase your favorite songs</p>
 
 <%- include('./partials/footer') %>
