--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
     <% if (user) { %>
       <a href="/users/<%= user._id %>">My Profile</a>
       <a href="/users/<%= user._id %>/entourage">Entourage</a>
-      <a href="/songs">Discover Songs</a>
+      <a href="/songs">Songs</a>
       <a href="/users">Geniuses</a>
       <a href="/auth/sign-out">Sign Out</a>
     <% } else { %>
