--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -2,15 +2,15 @@
 
 <%- include('../partials/nav') %>
 
-<h1>Songs</h1>
+<h1>Discover Songs</h1>
 
 <section class="store">
     <% songs.forEach( song => { %>
       <div class="record">
-        <a  style="text-decoration: none;" href="/songs/<%= song._id %>"><%= song.title %> - <%= song.artist %></a> <br>
+        <br>
+        <a  style="text-decoration: none;" href="/songs/<%= song._id %>"><%= song.title %></a> <br>
       </div>
       <% })  %>
 </section>
-
 
 <%- include('../partials/footer') %>
