--- a/views/songs/profile.ejs
+++ b/views/songs/profile.ejs
@@ -3,21 +3,22 @@
 
 <h1>This is your profile page <%= selectedUser.username %></h1>
 
-<main>
+<section id="song-form">
+  <h2>New Song</h2>
   <form id="new-song" action="/songs" method="POST">
     <label for="album-cover-input">Add Album Cover Image</label>
     <input type="text" name="albumCover" id="album-cover-input"><br>
     <label for="title-input">Add Song Title:</label>
     <input type="text" name="title" id="title-input"><br>
-    <label for="artist-input">Add Artist</label>
+    <label for="artist-input">Add Artist:</label>
     <input type="text" name="artist" id="artist-input"><br>
-    <label for="word-association-input">One word for how this song makes you feel:</label>
+    <label for="word-association-input">Emotion for song (One Word):</label><br>
     <input type="text" name="wordAssociation" id="word-association-input"><br>
-    <label for="rank-input">How much do you enjoy this song? (Choose number between 1-10)</label>
-    <input type="number" name="rank" id="rank-input" min="1" max="10"> <br>
+    <label for="rank-input">Rank this song? (Choose number between 1-10)</label>
+    <input type="number" name="rank" id="rank-input" min="1" max="10"> <br><br>
     <button type="submit">Add Song</button>
   </form>
-</main>
+</section>
 
 <section>
   <h1>My Songs</h1>
