--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -1,12 +1,14 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<h1>All Geniuses</h1>
+<h1 class="All">All Geniuses</h1>
 
 <section class="genius">
 <% users.forEach(u => { %>
   <div class="person">
-  <h4><a style="text-decoration:none" class="profile" href="/users/<%= u._id %>"><%= u.username %></a></h4>
+  <h3><a style="text-decoration:none" class="profile" href="/users/<%= u._id %>"><%= u.username %></a></h3>
+  <p class="top-songs">
+  </p>
 </div>
 <% }) %>
 </section>
