Add css styling

--- a/views/songs/profile.ejs
+++ b/views/songs/profile.ejs
@@ -14,8 +14,8 @@
     <input type="text" name="artist" id="artist-input"><br>
     <label for="word-association-input">Emotion for song (One Word):</label><br>
     <input type="text" name="wordAssociation" id="word-association-input"><br>
-    <label for="rank-input">Rank this song? (Choose number between 1-10)</label>
-    <input type="number" name="rank" id="rank-input" min="1" max="10"> <br><br>
+    <label for="rank-input">Rank this song? (1 is ranked best)</label>
+    <input type="number" name="rank" id="rank-input" min="1" max="5"> <br><br>
     <button type="submit">Add Song</button>
   </form>
 </section>
