--- a/views/songs/difprofile.ejs
+++ b/views/songs/difprofile.ejs
@@ -1,25 +1,26 @@
 <%- include('../partials/html-head') %>
 <%- include('../partials/nav') %>
 
-<h1>This is <%= selectedUser.username %>'s Profile Page</h1>
-<form action="/users/<%= user._id %>/entourage" method="POST">
+<h1><%= selectedUser.username %>'s Profile Page</h1>
+<section>
+<form class="friend" action="/users/<%= user._id %>/entourage" method="POST">
   <button type="submit">Add Friend</button>
 </form>
-
-
+<% songs.forEach( song => { %>
+  <% if(song.owner.equals(selectedUser?._id)) { %>
+    <div class="association"><a style="text-decoration: none;" href="/songs/<%= song._id %>"><h(<%= song.rank %>)><%= song.wordAssociation %></h(<%= song.rank %>)></a></div><br>
+    <% } %>
+    <% }) %>
+</section>
 
 
 <section>
   <h1><%= selectedUser.username %>'s Songs</h1>
-  <ul>
     <% songs.forEach( song => { %>
       <% if(song.owner.equals(selectedUser?._id)) { %>
-      <li>
-        <a href="/songs/<%= song._id %>"><%= song.title %> - <%= song.artist %></a>
-      </li>
+        <a href="/songs/<%= song._id %>"><%= song.title %> - <%= song.artist %></a>|
       <% } %>
       <% })  %>
-  </ul>
 </section>
 
 <%- include('../partials/footer') %>
