--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -5,3 +5,4 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/stylesheets/style.css">
   <title>Musical Genius</title>
+  <H1>MUSICAL GENIUS</H1>
