--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -5,6 +5,8 @@
   <p>From the Collection of <%= song.owner.username %></p>
   <h1><%= song.title %></h1> 
   <h1><%= song.artist %></h1>
+  <h2>Emotion: <%= song.wordAssociation %></h2>
+  <h2>Rank: <%= song.rank %></h2>
   <% if (song.owner.equals(user?._id)) { %>
     <a href="/songs/<%= song._id %>/edit">
       <button class="btn">Edit Song</button>
