--- a/views/users/index.ejs
+++ b/views/users/index.ejs
@@ -8,6 +8,7 @@
   <div class="person">
   <h3><a style="text-decoration:none" class="profile" href="/users/<%= u._id %>"><%= u.username %></a></h3>
   <p class="top-songs">
+    Top Songs
   </p>
 </div>
 <% }) %>
