--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('./partials/html-head') %>
+
 <%- include('./partials/nav') %>
 
-<h1>Welcome to Musical Genius</h1>
-<p>The Perfect Place to showcase your favorite songs</p>
+<h1>Welcome to The Perfect Place to showcase your favorite songs</h1>
 
 <%- include('./partials/footer') %>
