--- a/views/auth/sign-up.ejs
+++ b/views/auth/sign-up.ejs
@@ -2,15 +2,20 @@
 <h1>Musical Genius</h1>
 <%- include('../partials/nav') %>
 
+<section class="signUp">
 <form class="auth" action="/auth/sign-up" method="POST">
   <h1>Create a new account!</h1>
   <label for="username">Username:</label>
   <input type="text" maxlength="12" name="username" id="username" />
+  <br>
   <label for="password">Password:</label>
   <input type="password" name="password" id="password" />
+  <br>
   <label for="confirmPassword">Confirm Password:</label>
   <input type="password" name="confirmPassword" id="confirmPassword" />
+  <br>
   <button type="submit">Sign up</button>
 </form>
+</section>
 
 <%- include('../partials/footer') %>
