--- a/views/partials/html-head.ejs
+++ b/views/partials/html-head.ejs
@@ -3,6 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="../assets/images/MusicNoteFavicon.png" type="image/x-icon">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bodoni+Moda+SC:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&family=Matemasie&display=swap');
+    </style>
   <title>Musical Genius</title>
   <H1>MUSICAL GENIUS</H1>
