--- a/views/songs/index.ejs
+++ b/views/songs/index.ejs
@@ -4,17 +4,17 @@
 <h2>Discover Songs</h2>
 <h3>Click on a song to find out more</h3>
 <section class="store">
+    <div class="scroll">
+    <div class="content">
     <% songs.forEach( song => { %>
-      <% if(!(song.owner.equals(user?._id))) { %>
-      <a style="text-decoration: none;" href="/songs/<%= song._id %>">
-      
-    
+    <% if(!(song.owner.equals(user?._id))) { %>
+    <a style="text-decoration: none;" href="/songs/<%= song._id %>">
       <%= song.title %> - <%= song.artist %>
-      
   </a>|
   <% } %>
       <% })  %>
-      
+    </div>
+</div>
 </section>
 
 <%- include('../partials/footer') %>
