--- a/views/songs/profile.ejs
+++ b/views/songs/profile.ejs
@@ -27,7 +27,7 @@
     <input type="text" name="wordAssociation" id="word-association-input"><br>
     <label for="rank-input">Rank this song? (1 is ranked best)</label>
     <input type="number" name="rank" id="rank-input" min="1" max="5"> <br><br>
-    <button type="submit">Add Song</button>
+    <button class="btn" type="submit">Add Song</button>
   </form>
 </section>
 
