--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -108,6 +108,9 @@ span {
   border-width: 250px;
   border-color: black;
   text-align: center;
+  border: solid;
+  margin-left: 3%;
+  border-radius: 5%;
 }
 
 p {
@@ -199,14 +202,29 @@ p {
   border: solid;
   height: 10vh;
   font-size: 40px;
-  border-radius: 10%;
+  border-radius: 5%;
   margin-left: 6%;
-  margin-top: 6%;
+  margin-top: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.rank {
+.editSong {
+  width: 200px;
+  height: 300px;
+  border-width: 250px;
+  border-color: black;
   border: solid;
+  margin-top: 5%;
+  margin-left: 40%;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10%;
+}
+
+.btn {
+  box-shadow: 5px 3px 5px lightblue;
 }
