--- a/views/songs/show.ejs
+++ b/views/songs/show.ejs
@@ -8,12 +8,8 @@
   <div class="songCard">
     <h1><%= song.artist %></h1>
     <h1>🎶 <%= song.title %> 🎶</h1> 
-    <div class="word">
     <h2>Mood: <%= song.wordAssociation %></h2>
-  </div>
-    <div class="rank">
     <h2>Rank: <%= song.rank %></h2>
-  </div>
     <% if (song.owner.equals(user?._id)) { %>
     <div>
     <a href="/songs/<%= song._id %>/edit">
@@ -29,7 +25,7 @@
     <div>
       <form action="/songs/<%= song._id %>/comments" method="POST">
       <textarea name="content"></textarea> <br>
-      <button type="submit">Comment</button>
+      <button class="btn" type="submit">Comment</button>
       </form> <br>
     </div>
     <% } %>
@@ -39,7 +35,7 @@
 <h2>Comments</h2>
 <% if (song.comments.length) { %>
   <% song.comments?.forEach(comment => { %>
-      <%= comment.content %> - <a href="/users/<%= comment.author._id %>"><%= comment.author.username %></a>
+      <%= comment.content %> - <a href="/users/<%= comment.author._id %>"><%= comment.author.username %></a><br>
       <% if (comment.author.equals(user?._id)) { %>
         <div class="btn">
         <form action="/songs/<%= song._id %>/<%= comment._id %>?_method=DELETE" method="POST">
