--- a/views/songs/profile.ejs
+++ b/views/songs/profile.ejs
@@ -37,7 +37,7 @@
       <% songs.forEach( song => { %>
         <% if(song.owner.equals(user?._id)) { %>
           <% song.comments?.forEach(comment => { %>
-            "<%= comment.content %>" - <%= song.title%> by <%= song.artist %>
+            "<%= comment.content %>" - <a style="text-decoration: none;" href="/songs/<%= song._id %>"><%= song.title %> by <%= song.artist %></a>
             <% })  %>
           <% } %>
       <% })  %>
