--- a/views/songs/difprofile.ejs
+++ b/views/songs/difprofile.ejs
@@ -2,22 +2,32 @@
 <%- include('../partials/nav') %>
 
 <h1><%= selectedUser.username %>'s Profile Page</h1>
-<section>
+
+<section class="theirWords">
+  <div class="scrollMe3">
+    <div class="content3">
+      <h3>Moods</h3>
 <% songs.forEach( song => { %>
   <% if(song.owner.equals(selectedUser?._id)) { %>
     <div class="association"><a style="text-decoration: none;" href="/songs/<%= song._id %>"><h(<%= song.rank %>)><%= song.wordAssociation %></h(<%= song.rank %>)></a></div><br>
     <% } %>
     <% }) %>
+  </div>
+    </div>
 </section>
 
 
-<section>
+<section class="theirSongs">
+  <div class="scrollMe4">
+    <div class="content4">
   <h1><%= selectedUser.username %>'s Songs</h1>
     <% songs.forEach( song => { %>
       <% if(song.owner.equals(selectedUser?._id)) { %>
         <a href="/songs/<%= song._id %>"><%= song.title %> - <%= song.artist %></a>|
       <% } %>
       <% })  %>
+    </div>
+  </div>
 </section>
 
 <%- include('../partials/footer') %>
